--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -1,10 +1,11 @@
 body {
-    font-family: 'Roboto', sans-serif;
-    margin: 0; padding: 0;
-    color: white;
-    background-color: #4A57E0;
+  font-family: "Roboto", sans-serif;
+  margin: 0;
+  padding: 0;
+  color: white;
+  background-color: #4a57e0;
 }
 
 a {
-    color: rgb(252, 216, 56);
+  color: rgb(252, 216, 56);
 }
